Создали иерархию папок

--- a/Convertly/Convertly.csproj
+++ b/Convertly/Convertly.csproj
@@ -3,9 +3,17 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
+    <!--<Nullable>enable</Nullable>-->
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="ViewModels\Commands\" />
+    <Folder Include="ViewModels\Serviсes\" />
+    <Folder Include="Views\Pages\" />
+    <Folder Include="Views\Styles\" />
+  </ItemGroup>
 
 </Project>
