--- a/Convertly/Convertly.csproj
+++ b/Convertly/Convertly.csproj
@@ -9,11 +9,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
+    <None Remove="ViewModels\Res\GIF_Loading.gif" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="TempFile\TempImages\" />
+    <Folder Include="TempFile\TempDocuments\" />
+    <Folder Include="TempFile\TempGIFs\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FontAwesome5" Version="2.1.11" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="ViewModels\Res\GIF_Loading.gif" />
   </ItemGroup>
 
 </Project>
